--- a/themepacks/midnight/stylesheet.css
+++ b/themepacks/midnight/stylesheet.css
@@ -31,7 +31,7 @@ span, .post-author .date, .crp-entry--message---text, .messenger-app--messages--
     border-color: #1c202f;
 }
 
-.accountInfo, .left_small_block, #profile_link, .profile_link, .navigation .link, .navigation .link:hover, .navigation_footer .link, .navigation_footer .link:hover, .completeness-gauge, input[type="text"], input[type="password"], input[type~="text"], input[type~="password"], input[type="email"], input[type="phone"], input[type~="email"], input[type~="phone"], input[type="search"], input[type~="search"], input[type~="date"], select, .content_title_expanded, .content_title_unexpanded, .content_subtitle, textarea, .post-content, .post-author, hr, h4, .postFeedWrapper, .tabs, #wallAttachmentMenu, .ovk-diag, .ovk-diag-head, #ovkDraw, #ovkDraw .literally .lc-picker, .literally .lc-options.horz-toolbar, .page_wrap, .container_gray .content, .summaryBar, .groups_options, form[action="/search"] > input, .header_search_input, .header_search_inputbt, .accent-box, .page_status_popup, .messenger-app--input, .messenger-app, .crp-entry:first-of-type, .crp-list, .crp-entry, .note_footer, .page_content > div, #editor, .note_header, center[style="background: white;border: #DEDEDE solid 1px;"], .album-photo img, .mb_tabs, .mb_tab#active div, .navigation-lang .link_new, #faqhead, #faqcontent, .post-divider, .comment, .commentsTextFieldWrap, tr, td, th, #votesBalance, .paginator a.active, .paginator a:hover, .topic-list-item, #userContent blockquote, .tippy-box[data-theme~="vk"] {
+.accountInfo, .left_small_block, #profile_link, .profile_link, .navigation .link, .navigation .link:hover, .navigation_footer .link, .navigation_footer .link:hover, .completeness-gauge, input[type="text"], input[type="password"], input[type~="text"], input[type~="password"], input[type="email"], input[type="phone"], input[type~="email"], input[type~="phone"], input[type="search"], input[type~="search"], input[type~="date"], select, .content_title_expanded, .content_title_unexpanded, .content_subtitle, textarea, .post-content, .post-author, hr, h4, .postFeedWrapper, .tabs, #wallAttachmentMenu, .ovk-diag, .ovk-diag-head, #ovkDraw, #ovkDraw .literally .lc-picker, .literally .lc-options.horz-toolbar, .page_wrap, .container_gray .content, .summaryBar, .groups_options, form[action="/search"] > input, .header_search_input, .header_search_inputbt, .accent-box, .page_status_popup, .messenger-app--input, .messenger-app, .crp-entry:first-of-type, .crp-list, .crp-entry, .note_footer, .page_content > div, #editor, .note_header, center[style="background: white;border: #DEDEDE solid 1px;"], .album-photo img, .mb_tabs, .mb_tab#active div, .navigation-lang .link_new, #faqhead, #faqcontent, .post-divider, .comment, .commentsTextFieldWrap, tr, td, th, #votesBalance, .paginator a.active, .paginator a:hover, .topic-list-item, #userContent blockquote, .tippy-box[data-theme~="vk"], .poll {
     border-color: #2c2640 !important;
 }
 
@@ -106,7 +106,7 @@ h4, .content_title_expanded, .summaryBar .summary, .content_title_unexpanded {
     color: #7c94c5;
 }
 
-.notes_titles small, .post-upload {
+.notes_titles small, .post-upload, .post-has-poll {
     color: #6f82a8;
 }
 
@@ -124,11 +124,11 @@ h4, .content_title_expanded, .summaryBar .summary, .content_title_unexpanded {
 }
 
 .content_title_expanded {
-    background-image: url("/themepack/midnight/0.0.1.3/resource/flex_arrow_open.png");
+    background-image: url("/themepack/midnight/0.0.1.4/resource/flex_arrow_open.png");
 }
 
 .content_title_unexpanded {
-    background-image: url("/themepack/midnight/0.0.1.3/resource/flex_arrow_shut.gif");
+    background-image: url("/themepack/midnight/0.0.1.4/resource/flex_arrow_shut.gif");
 }
 
 .ovk-video > .preview, .video-preview {
@@ -150,28 +150,28 @@ h4, .content_title_expanded, .summaryBar .summary, .content_title_unexpanded {
 
 .page_yellowheader {
     color: #c6d2e8;
-    background-image: url("/themepack/midnight/0.0.1.3/resource/header_purple.png");
+    background-image: url("/themepack/midnight/0.0.1.4/resource/header_purple.png");
     background-color: #231f34;
     border-color: #231f34;
 }
 
 .page_header {
-    background-image: url("/themepack/midnight/0.0.1.3/resource/header.png");
+    background-image: url("/themepack/midnight/0.0.1.4/resource/header.png");
 }
 
 .page_custom_header {
-    background-image: url("/themepack/midnight/0.0.1.3/resource/header_custom.png");
+    background-image: url("/themepack/midnight/0.0.1.4/resource/header_custom.png");
 }
 
 .page_yellowheader span, .page_yellowheader a {
     color: #a48aff !important;
 }
 
-.completeness-gauge {
+.completeness-gauge, .poll-result-bar {
     background-color: #231e33;
 }
 
-.completeness-gauge > div {
+.completeness-gauge > div, .poll-result-bar-sub {
     background-color: #2c2640;
 }
 
@@ -180,11 +180,11 @@ form[action="/search"] > input, .header_search_input, textarea, input[type="text
 }
 
 input[type="checkbox"] {
-    background-image: url("/themepack/midnight/0.0.1.3/resource/checkbox.png");
+    background-image: url("/themepack/midnight/0.0.1.4/resource/checkbox.png");
 }
 
 input[type="radio"] {
-    background-image: url("/themepack/midnight/0.0.1.3/resource/radio.png");
+    background-image: url("/themepack/midnight/0.0.1.4/resource/radio.png");
 }
 
 .header_navigation .link {
@@ -192,19 +192,19 @@ input[type="radio"] {
 }
 
 .heart {
-    background-image: url("/themepack/midnight/0.0.1.3/resource/like.gif") !important;
+    background-image: url("/themepack/midnight/0.0.1.4/resource/like.gif") !important;
 }
 
 .pinned-mark, .post-author .pin {
-    background-image: url("/themepack/midnight/0.0.1.3/resource/pin.png") !important;
+    background-image: url("/themepack/midnight/0.0.1.4/resource/pin.png") !important;
 }
 
 .repost-icon {
-    background-image: url("/themepack/midnight/0.0.1.3/resource/published.gif") !important;
+    background-image: url("/themepack/midnight/0.0.1.4/resource/published.gif") !important;
 }
 
 .post-author .delete {
-    background-image: url("/themepack/midnight/0.0.1.3/resource/input_clear.gif") !important;
+    background-image: url("/themepack/midnight/0.0.1.4/resource/input_clear.gif") !important;
 }
 
 .user-alert {
